Update Contact form to enable Netlify form handling by adding data-netlify attribute for improved submission functionality.

--- a/michael-preciado-website/contact.html
+++ b/michael-preciado-website/contact.html
@@ -1,4 +1,4 @@
-<form name="contact" netlify id="contact-form">
+<form name="contact" netlify data-netlify="true" id="contact-form">
     <p>
       <label>Name <input type="text" name="name" /></label>
     </p>
