--- a/michael-preciado-website/index.html
+++ b/michael-preciado-website/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpeg" href="/images/goku.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#1E90FF">
-    <title>Michael Preiado</title>
+    <title>Michael Preciado</title>
   </head>
   <body>
     <div id="root"></div>
