--- a/michael-preciado-website/index.html
+++ b/michael-preciado-website/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/images/code-logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/laptop.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#1E90FF">
     <title>Michael Preciado</title>
