--- a/michael-preciado-website/index.html
+++ b/michael-preciado-website/index.html
@@ -19,12 +19,12 @@
 
     <footer class="site-footer">
       <div class="social-icons">
-        <a href="https://github.com/MichaelPreciado" class="footer-icon" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+        <a href="https://github.com/MichaelPreciado" class="footer-icon" aria-label="GitHub">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1 12.07 12.07 0 0 0 12 3.29a12.07 12.07 0 0 0-7.91-2.51A5.07 5.07 0 0 0 4 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.46 3.3 6.56 6.44 6.91A3.37 3.37 0 0 0 9 18.13V22"/>
           </svg>
         </a>
-        <a href="https://www.linkedin.com/in/michael-preciado/" class="footer-icon" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+        <a href="https://www.linkedin.com/in/michael-preciado/" class="footer-icon" aria-label="LinkedIn">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/>
             <rect x="2" y="9" width="4" height="12"/>
@@ -39,8 +39,7 @@
         </a>
       </div>
       <p>© 2024 Michael Preciado</p>
-      <p class="tagline">Built with coffee & curiosity.</p>
-      <p class="creator-tag">Created by MP</p>
+      <p class="tagline">Built with caffeine & curiosity.</p>
     </footer>
 
   </body>
