Update email address in footer and change blog post category from Technology to Spirituality for better alignment with content themes.

--- a/michael-preciado-website/index.html
+++ b/michael-preciado-website/index.html
@@ -51,7 +51,7 @@
             <circle cx="4" cy="4" r="2"/>
           </svg>
         </a>
-        <a href="mailto:michael.preciado@outlook.com" class="footer-icon" aria-label="Email">
+        <a href="mailto:mpreciado1997@gmail.com" class="footer-icon" aria-label="Email">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <rect x="2" y="4" width="20" height="16" rx="2" ry="2"/>
             <polyline points="22,6 12,13 2,6"/>
