Add apple touch icon for laptop emoji

--- a/michael-preciado-website/index.html
+++ b/michael-preciado-website/index.html
@@ -2,11 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text y="0.9em" font-size="90">💻</text></svg>'
-    />
+    <link rel="icon" type="image/svg+xml" href="/laptop-emoji.svg" />
+    <link rel="apple-touch-icon" href="/laptop-emoji.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#1E90FF">
     <meta name="description" content="Michael Preciado - Software Developer & AI Automation Expert. Building modern web applications with cutting-edge technologies.">
